--- a/DA_KDPM_QLGB/ProjectSettings/app.config
+++ b/DA_KDPM_QLGB/ProjectSettings/app.config
@@ -8,7 +8,7 @@
     <userSettings>
         <ProjectSettings.Properties.Settings>
             <setting name="UserConnectionString" serializeAs="String">
-                <value>Database connection string (User type)</value>
+                <value>Data Source={0}; Initial Catalog={1}; User ID={2}; Password={3};</value>
             </setting>
         </ProjectSettings.Properties.Settings>
     </userSettings>
