--- a/DA_KDPM_QLGB/BLL/BLL.csproj
+++ b/DA_KDPM_QLGB/BLL/BLL.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaiKhoanBLL.cs" />
     <Compile Include="TestBLL.cs" />
   </ItemGroup>
   <ItemGroup>
