--- a/DA_KDPM_QLGB/DAL/DAL.csproj
+++ b/DA_KDPM_QLGB/DAL/DAL.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaiKhoanDAL.cs" />
     <Compile Include="TestDAL.cs" />
   </ItemGroup>
   <ItemGroup>
