Hoàn thành các nghiệp vụ FrmKhachHang

--- a/DA_KDPM_QLGB/DAL/DAL.csproj
+++ b/DA_KDPM_QLGB/DAL/DAL.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KhachHangDAL.cs" />
     <Compile Include="LoaiBaoDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaiKhoanDAL.cs" />
