--- a/DA_KDPM_QLGB/BLL/BLL.csproj
+++ b/DA_KDPM_QLGB/BLL/BLL.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KhachHangBLL.cs" />
     <Compile Include="LoaiBaoBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaiKhoanBLL.cs" />
