Hoàn thành FrmDatBao
Bổ sung thêm chức năng sửa vào xóa chi tiết đặt báo

--- a/DA_KDPM_QLGB/BLL/BLL.csproj
+++ b/DA_KDPM_QLGB/BLL/BLL.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChiTietDatBaoBLL.cs" />
+    <Compile Include="DatBaoBLL.cs" />
     <Compile Include="KhachHangBLL.cs" />
     <Compile Include="LoaiBaoBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
