--- a/DA_KDPM_QLGB/GUI/GUI.csproj
+++ b/DA_KDPM_QLGB/GUI/GUI.csproj
@@ -63,6 +63,12 @@
     <Compile Include="FrmDangNhap.Designer.cs">
       <DependentUpon>FrmDangNhap.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmDatBao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmDatBao.Designer.cs">
+      <DependentUpon>FrmDatBao.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmKhachHang.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmDangNhap.resx">
       <DependentUpon>FrmDangNhap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmDatBao.resx">
+      <DependentUpon>FrmDatBao.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmKhachHang.resx">
       <DependentUpon>FrmKhachHang.cs</DependentUpon>
