--- a/DA_KDPM_QLGB/GUI/GUI.csproj
+++ b/DA_KDPM_QLGB/GUI/GUI.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CTDBControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CTDBControl.Designer.cs">
+      <DependentUpon>CTDBControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmBackup.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,6 +64,12 @@
     <Compile Include="FrmCauHinh.Designer.cs">
       <DependentUpon>FrmCauHinh.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmChiTietDatBao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmChiTietDatBao.Designer.cs">
+      <DependentUpon>FrmChiTietDatBao.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmDangNhap.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +81,12 @@
     </Compile>
     <Compile Include="FrmDatBao.Designer.cs">
       <DependentUpon>FrmDatBao.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmDSDatBao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmDSDatBao.Designer.cs">
+      <DependentUpon>FrmDSDatBao.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmKhachHang.cs">
       <SubType>Form</SubType>
@@ -103,17 +121,26 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities.cs" />
+    <EmbeddedResource Include="CTDBControl.resx">
+      <DependentUpon>CTDBControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmBackup.resx">
       <DependentUpon>FrmBackup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmCauHinh.resx">
       <DependentUpon>FrmCauHinh.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmChiTietDatBao.resx">
+      <DependentUpon>FrmChiTietDatBao.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmDangNhap.resx">
       <DependentUpon>FrmDangNhap.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmDatBao.resx">
       <DependentUpon>FrmDatBao.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmDSDatBao.resx">
+      <DependentUpon>FrmDSDatBao.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmKhachHang.resx">
       <DependentUpon>FrmKhachHang.cs</DependentUpon>
